mucho xd , backend sobretodo

--- a/Frontend/src/scss/botonadd.scss
+++ b/Frontend/src/scss/botonadd.scss
@@ -17,3 +17,30 @@
     outline: 3px solid lighten(#0057b8, 30%);
   }
 }
+
+.boton {
+  background-color: rgb(70, 70, 138);
+  color: white;
+  border: 1px solid black;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 20px;
+  &:hover {
+    background-color: rgb(70, 70, 138);
+    color: white;
+    transform: scale(1.1);
+    border: 1px solid black;
+  }
+}
+
+.caja-boton {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.botonhover {
+  &:hover {
+    transform: scale(1.2);
+  }
+}
